0.2 (not released yet)
- ported DAO layer to use Spring-Data

0.1.3
- implemented ability to add countries
- ported to use JSR-303 validation
- functional tests now uses FEST's assertions
- added checking by CheckStyle
- added code coverage generation by Cobertura
- added ability to generate Javadocs
- migrated from XML configs to Java bean confiuration
- added unit tests for business logic layer

0.1.2
- use Maven2 for building project
- rewrited functional tests for using Selenium2
- use JPA (with Hibernate as its implementation)
  for access to database (instead of JDBC)
- functional tests now runs under Jetty
- functional tests now may use HSQL as database
- switching to use slf4j over log4j

0.1.1
- rewrited to using Spring MVC 3

0.1
- added initial skeleton of site (JSF 1.2 with JSP/JSTL)
- added functional tests (Selenium Core)
- added i18n with l10n
- use Ant for building project
- use log4j for logging
- use Lombok for code simplification
