@@ -22,25 +22,17 @@ import static org.fest.assertions.Assertions.assertThat;
 
 import static ru.mystamps.web.tests.TranslationUtils.tr;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
-
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.beans.factory.annotation.Value;
+import org.testng.annotations.BeforeClass;
+import org.testng.annotations.Test;
 
 import ru.mystamps.web.tests.page.AuthAccountPage;
 
 /*
- * TODO: use @BeforeClass/@AfterClass annotations from TestNG (#92)
- * (For now we can't use them because JUnit required than them should be static.)
- *
  * TODO: split test to parts
  * (For now we can't do this because order of tests not defined and logout
  * may happens before some of test.)
  */
-@RunWith(SpringJUnit4ClassRunner.class)
-@ContextConfiguration(locations = "classpath:spring/TestContext.xml")
 public class WhenAuthenticatedUserTryToAuthenticates
 	extends WhenUserAtAnyPageWithForm<AuthAccountPage> {
 	
@@ -53,7 +45,10 @@ public class WhenAuthenticatedUserTryToAuthenticates
 	public WhenAuthenticatedUserTryToAuthenticates() {
 		super(AuthAccountPage.class);
 		hasTitle(tr("t_auth_title"));
-		
+	}
+	
+	@BeforeClass
+	public void setUp() {
 		page.open();
 	}
 	
