@@ -1,5 +1,6 @@
 0.2 (not released yet)
 - ported DAO layer to use Spring-Data
+- ported unit and functional tests to TestNG
 
 0.1.3
 - implemented ability to add countries
